<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ClosetFragment">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@id/rvItems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/coat"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/jacket"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip3"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/sweater"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip10"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/hoodie"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip6"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/t_shirt"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip12"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/joggers"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip9"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/pants"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip8"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/shorts"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip5"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/boots"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip7"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/sneakers"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip11"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/slides"
            android:textColor="@color/black"
            android:textSize="13sp" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvItems"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group_filter" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_baseline_add_circle"
        app:layout_anchor="@id/rvItems"
        app:layout_anchorGravity="bottom|right|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
