<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.RegisterFragment">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="5dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:text="@string/tag"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/etFirstname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etSignUpLastname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="15sp" />


    <EditText
        android:id="@+id/etSignupUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etSignupPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etSignupRePassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_custom"
        android:hint="@string/re_type_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <org.angmarch.views.NiceSpinner
        android:id="@+id/nice_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/et_custom"
        android:backgroundTint="#C5C0C0" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_custom"
            android:backgroundTint="#2196F3"
            android:text="@string/register"
            android:textColor="@android:color/white" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_above="@id/swipeLeft"
            android:layout_centerHorizontal="true"
            android:src="@drawable/arrow_left" />

        <TextView
            android:id="@+id/swipeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/swipe_right_for_login"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </RelativeLayout>

</LinearLayout>
