<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Fragments.UploadFragment">

    <Button
        android:id="@+id/btnTakePicture"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="37dp"
        android:text="@string/take_picture"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/etColour"
        android:layout_width="149dp"
        android:layout_height="71dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="470dp"
        android:layout_marginEnd="253dp"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/enter_a_colour"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <ImageView
        android:id="@+id/ivPicture"
        android:layout_width="275dp"
        android:layout_height="274dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="63dp"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="73dp"
        tools:srcCompat="@tools:sample/avatars" />

    <Spinner
        android:id="@+id/spCategory"
        android:layout_width="124dp"
        android:layout_height="41dp"
        android:layout_alignTop="@+id/etColour"
        android:layout_alignBottom="@+id/etColour"
        android:layout_alignParentStart="true"
        android:layout_marginStart="229dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="2dp"
        android:background="@color/white"
        android:backgroundTint="#FFFF" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingUploadAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|right|end"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="19dp"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_baseline_upload"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btCloset"
        android:layout_width="50dp"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="34dp"
        android:layout_marginBottom="21dp"
        android:background="@color/black"
        android:src="@drawable/ic_baseline_arrow_back_24" />
</RelativeLayout>