<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    tools:context=".Activities.ItemDetailActivity">

    <ImageView
        android:id="@+id/ivItem"
        android:layout_width="match_parent"
        android:layout_height="274dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/category"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvItemCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/category"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/colour"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvItemColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"

            android:text="@string/colour"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/date_added"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDateAdded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/colour"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>


    <com.example.swipebutton_library.SwipeButton
        android:id="@+id/swipe_btn_1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="50dp"
        app:button_background_drawable="@drawable/shape_button"
        app:button_background_padding="12dp"
        app:button_background_src="@drawable/ic_baseline_delete_24"
        app:button_background_tint="@color/colorPrimary"
        app:button_height="50dp"
        app:button_width="50dp"
        app:has_active_status="false"
        app:has_finish_animation="false"
        app:inner_text="Swipe to delete"
        app:inner_text_color="@color/colorAccent"
        app:inner_text_gravity="end"
        app:inner_text_padding="8dp"
        app:inner_text_size="16sp"
        app:outer_background_drawable="@drawable/shape_button"
        app:outer_background_height="40dp"
        app:outer_background_tint="#A6A3A3"
        app:trail_background_tint="@color/colorPrimary"
        app:trail_enabled="true" />
</LinearLayout>